fix layout issue with profiler when a large base64 image is logged

--- a/packages/jsreport-studio/src/components/Preview/Preview.css
+++ b/packages/jsreport-studio/src/components/Preview/Preview.css
@@ -1,5 +1,6 @@
 .previewContainer {
   display: flex;
+  width: 100%;
   flex: 1 1;
   flex-direction: column;
   background-color: $preview-backgroundColor;
